# BipedalWalker2D

./: README.md  actor_loss.npy  critic1_loss.npy  critic2_loss.npy  notebook.ipynb  pyproject.toml  reward.npy  steps.npy  tensorflow-SAC-implementation.ipynb
Modell/: q.ckpt.index
deep-q-model/: q.ckpt.data-00000-of-00001
walker 6/: actor.ckpt.data-00000-of-00001  actor.ckpt.index  checkpoint  critic1.ckpt.data-00000-of-00001  critic1.ckpt.index  critic2.ckpt.data-00000-of-00001  critic2.ckpt.index  target1.ckpt.data-00000-of-00001  target1.ckpt.index  target2.ckpt.data-00000-of-00001  target2.ckpt.index
