[tool.poetry]
name = "bipedalwalker2d"
version = "0.1.0"
description = ""
authors = ["Michael Fuglø <michael@fuglo.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.9.16"
numpy = "^1.24.2"
pandas = "^1.5.3"
matplotlib = "^3.7.1"
scikit-learn = "^1.2.1"
keras = "^2.11.0"
tensorflow-macos = "^2.11.0"
seaborn = "^0.12.2"
gym = {extras = ["box2d"], version = "^0.26.2"}
imageio = {extras = ["ffmpeg"], version = "^2.28.0"}
swig = "^4.1.1"
wheel = "^0.40.0"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.21.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
