[tool.poetry]
name = "bipedalwalker2d"
version = "0.1.0"
description = ""
authors = ["Michael Fuglø <michael@fuglo.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.9.16"
pandas = "^1.5.3"
matplotlib = "^3.7.1"
scikit-learn = "^1.2.1"
keras = "^2.11.0"
tensorflow-macos = "^2.11.0"
seaborn = "^0.12.2"
gym = {extras = ["box2d"], version = "^0.21.0"}
imageio = {extras = ["ffmpeg"], version = "^2.28.0"}
swig = "^4.1.1"
torch = "^2.0.1"
python-dotenv = "^1.0.0"
numpy = "1.23.5"
setuptools = "65.5.0"
wheel = "0.38.4"
#gym = "0.21.0"
stable-baselines3 = "^1.8.0"
tqdm = "^4.65.0"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.21.3"

[build-system]
requires = ["poetry-core>=1.0.0", "setuptools==65.6.3"]
build-backend = "poetry.core.masonry.api"
